--- a/Frontend/styles/styles.css
+++ b/Frontend/styles/styles.css
@@ -30,24 +30,24 @@ p + p {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .card-wrap {
   margin: 10px;
   -webkit-transform: perspective(800px);
-          transform: perspective(800px);
+  transform: perspective(800px);
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   cursor: pointer;
 }
 
 .card-wrap:hover .card-info {
   -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .card-wrap:hover .card-info p {
@@ -65,36 +65,49 @@ p + p {
   transition: 5s cubic-bezier(0.23, 1, 0.32, 1);
   opacity: 1;
   -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .card-wrap:hover .card-bg {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
+  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
   opacity: 0.8;
 }
 
 .card-wrap:hover .card {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1), -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0 0 40px 5px, white 0 0 0 1px, rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset white 0 0 0 6px;
-          box-shadow: rgba(255, 255, 255, 0.2) 0 0 40px 5px, white 0 0 0 1px, rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset white 0 0 0 6px;
+  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1),
+    box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1),
+    -webkit-box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
+  -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0 0 40px 5px, white 0 0 0 1px,
+    rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset white 0 0 0 6px;
+  box-shadow: rgba(255, 255, 255, 0.2) 0 0 40px 5px, white 0 0 0 1px,
+    rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset white 0 0 0 6px;
 }
 
 .card {
   position: relative;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 240px;
-          flex: 0 0 240px;
+  -ms-flex: 0 0 240px;
+  flex: 0 0 240px;
   width: 240px;
   height: 320px;
   background-color: #333;
   overflow: hidden;
   border-radius: 10px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
-          box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
+  box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
   -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
@@ -110,8 +123,10 @@ p + p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95),
+    opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95),
+    opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   pointer-events: none;
 }
 
@@ -121,7 +136,7 @@ p + p {
   bottom: 0;
   color: #fff;
   -webkit-transform: translateY(40%);
-          transform: translateY(40%);
+  transform: translateY(40%);
   -webkit-transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
@@ -146,12 +161,22 @@ p + p {
   z-index: 0;
   width: 100%;
   height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.6)));
-  background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(transparent),
+    to(rgba(0, 0, 0, 0.6))
+  );
+  background-image: linear-gradient(
+    to bottom,
+    transparent 0%,
+    rgba(0, 0, 0, 0.6) 100%
+  );
   background-blend-mode: overlay;
   opacity: 0;
   -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  transform: translateY(100%);
   -webkit-transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
@@ -163,3 +188,252 @@ p + p {
   text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
 }
 /*# sourceMappingURL=styles.css.map */
+.containerD {
+  background-color: #363e4a;
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 1.5;
+}
+.containerD h1 {
+  font-family: "Texta", "Avenir Next", "Avenir", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-align: center;
+}
+.containerD h2 {
+  font-weight: 400;
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.4);
+}
+.containerD {
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 20px 16px 40px 16px;
+  transform: translateZ(0);
+  border-radius: 4px;
+  text-align: center;
+}
+
+.containerD .form-footer {
+  margin-top: 2em;
+}
+
+.containerD .ui-input {
+  position: relative;
+  padding: 0;
+  border: 0;
+}
+.containerD .ui-input input {
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  border: 0;
+  background: none;
+  padding: 16px 0 16px 0;
+  font-size: 24px;
+  outline: 0;
+  width: 100%;
+  tap-highlight-color: rgba(0, 0, 0, 0);
+  touch-callout: none;
+}
+.containerD .ui-input input + label {
+  position: relative;
+  display: block;
+  padding: 8px 0 8px 0;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 0.0875em;
+  font-weight: 500;
+  text-align: left;
+}
+.containerD .ui-input input + label::before,
+.containerD .ui-input input + label::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 1px;
+}
+.containerD .ui-input input + label::before {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.containerD .ui-input input + label::after {
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  background-color: #6eb1ff;
+  height: 2px;
+}
+.containerD .ui-input input + label span {
+  position: relative;
+  color: rgba(255, 255, 255, 0.2);
+  transition: color 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.containerD .ui-input input + label span::after {
+  content: attr(data-text);
+  position: absolute;
+  overflow: hidden;
+  left: 0;
+  transform: scaleX(1);
+  white-space: nowrap;
+  color: #fff;
+  background-image: linear-gradient(
+    to right,
+    #4a90e2 50%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: 100% 50%;
+  background-size: 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  backface-visibility: hidden;
+  perspective: 1000;
+  transform: translateZ(0);
+  transition: background-position 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.containerD .ui-input input:focus + label::after,
+.containerD .ui-input input.error + label::after,
+.containerD .ui-input input:invalid + label::after,
+.containerD .ui-input input.filled + label::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.containerD .ui-input input:focus + label span::after,
+.containerD ui-input input.error + label span::after,
+.containerD ui-input input:invalid + label span::after,
+.containerD .ui-input input.filled + label span::after {
+  background-image: linear-gradient(
+    to right,
+    white 50%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: 0% 50%;
+}
+
+.containerD .ui-input input.filled {
+  color: #ffffff;
+}
+.containerD .ui-input input.filled + label::after {
+  background-color: #ffffff;
+}
+.ui-input input.filled + label span::after {
+  background-image: linear-gradient(
+    to right,
+    #ffffff 50%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: 0% 50%;
+}
+
+.ui-input input:focus {
+  color: #6eb1ff;
+}
+.ui-input input:focus + label::after {
+  background-color: #6eb1ff;
+}
+.ui-input input:focus + label span::after {
+  background-image: linear-gradient(
+    to right,
+    #6eb1ff 50%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: 0% 50%;
+}
+
+.containerD .ui-input input.error,
+.containerD .ui-input input:invalid {
+  color: #e66161;
+}
+.containerD .ui-input input.error + label::after,
+.containerD .ui-input input:invalid + label::after {
+  background-color: #e66161;
+}
+.containerD .ui-input input.error + label span::after,
+.containerD .ui-input input:invalid + label span::after {
+  background-image: linear-gradient(
+    to right,
+    #e66161 50%,
+    rgba(255, 255, 255, 0) 0%
+  );
+  background-position: 0% 50%;
+}
+
+.containerD .btn {
+  border: 0;
+  background-color: #50617a;
+  padding: 18px 30px;
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  letter-spacing: 0.0875em;
+  font-weight: 500;
+  color: #ffffff;
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  border-radius: 100px;
+  outline: 0;
+  transition: background-color 300ms cubic-bezier(0.215, 0.61, 0.355, 1),
+    color 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.containerD .btn:focus,
+.containerD .btn:active,
+.containerD .btn:hover {
+  background-color: #6eb1ff;
+  color: white;
+}
+
+.containerD .__first,
+.containerD .__second,
+.containerD .__third,
+.containerD .__fourth {
+  animation-name: fadeIn;
+  animation-duration: 180ms;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+.containerD .__first {
+  animation-delay: 0;
+}
+
+.containerD .__second {
+  animation-delay: 80ms;
+}
+
+.containerD .__third {
+  animation-delay: 180ms;
+}
+
+.containerD .__fourth {
+  animation-delay: 360ms;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -25%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+#particle {
+  position: relative;
+  z-index: 3;
+}
+/* Particle */
+canvas.particles-js-canvas-el {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -100;
+  width: 1000%;
+  height: 100%;
+}
