--- a/Frontend/styles/styles.css
+++ b/Frontend/styles/styles.css
@@ -111,12 +111,34 @@ p + p {
   -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
+/* change card content */
 
 .card-bg {
   opacity: 0.5;
-  position: absolute;
-  top: -20px;
-  left: -20px;
+  position: relative;
+  top: -0.5px;
+  left: -0.5px;
+  width: 100%;
+  height: 97.5%;
+  padding: 5px;
+  margin: 2px auto 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95),
+    opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95),
+    opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  pointer-events: none;
+  background-color: black;
+}
+
+/* Default */
+/* .card-bg {
+  opacity: 0.5;
+  position: relative;
+  top: -2px;
+  left: -2px;
   width: 100%;
   height: 100%;
   padding: 20px;
@@ -128,7 +150,7 @@ p + p {
   transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95),
     opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   pointer-events: none;
-}
+} */
 
 .card-info {
   padding: 20px;
