--- a/Frontend/styles/styles.css
+++ b/Frontend/styles/styles.css
@@ -1,3 +1,60 @@
+.loading {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "montserrat", sans-serif;
+  width: 200px;
+  height: 200px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border-top: 10px solid #e74c3c;
+  position: relative;
+  animation: a1 2s linear infinite;
+}
+
+.loading:before,
+.loading::after {
+  content: "";
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 0;
+  top: -10px;
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.loading:before {
+  border-top: 10px solid #e67e22;
+  transform: rotate(120deg);
+}
+.loading::after {
+  border-top: 10px solid #3498db;
+  transform: rotate(240deg);
+}
+
+.loading span {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  color: #fff;
+  text-align: center;
+  line-height: 200px;
+  animation: a2 2s linear infinite;
+}
+
+@keyframes a1 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes a2 {
+  to {
+    transform: rotate(-360deg);
+  }
+}
+/* Loader Done*/
 body {
   margin: 40px 0;
   font-family: "Raleway";
@@ -456,6 +513,6 @@ canvas.particles-js-canvas-el {
   top: 0;
   left: 0;
   z-index: -100;
-  width: 1000%;
+  width: 100%;
   height: 100%;
 }
